--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "tailwindcss": "^2.1.2",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "@fawmi/vue-google-maps": "^0.9.4"
     }
 }
