--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "stripe/stripe-php": "^7.100",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
