--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         "phpunit/phpunit": "^9.5.8"
     },
     "autoload": {
+        "files": [
+            "app/Http/Helpers/Stripe.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
