--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "@inertiajs/inertia": "^0.10.0",
         "@inertiajs/inertia-vue3": "^0.5.1",
         "@inertiajs/progress": "^0.2.6",
@@ -26,6 +27,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "@fawmi/vue-google-maps": "^0.9.4"
+        "@fawmi/vue-google-maps": "^0.9.4",
+        "vuedraggable": "^4.1.0"
     }
 }
