--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     },
     "autoload": {
         "files": [
-            "app/Http/Helpers/Stripe.php"
+            "app/Http/Helpers/Stripe.php",
+            "app/Http/Helpers/Translation.php"
         ],
         "psr-4": {
             "App\\": "app/",
