--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@fawmi/vue-google-maps": "^0.9.4",
+        "@vueform/multiselect": "^2.3.1",
         "vuedraggable": "^4.1.0"
     }
 }
