--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "codezero/laravel-localized-routes": "^2.6",
         "doctrine/dbal": "^3.1",
         "fruitcake/laravel-cors": "^2.0",
