--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@inertiajs/inertia": "^0.10.0",
         "@inertiajs/inertia-vue3": "^0.5.1",
         "@inertiajs/progress": "^0.2.6",
-        "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/forms": "^0.4.0-alpha.2",
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.4.1",
         "axios": "^0.21",
@@ -29,6 +29,8 @@
     },
     "dependencies": {
         "@fawmi/vue-google-maps": "^0.9.4",
+        "@tiptap/starter-kit": "^2.0.0-beta.164",
+        "@tiptap/vue-3": "^2.0.0-beta.85",
         "@vueform/multiselect": "^2.3.1",
         "vuedraggable": "^4.1.0"
     }
