--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "autoload": {
         "files": [
             "app/Http/Helpers/Stripe.php",
-            "app/Http/Helpers/Translation.php"
+            "app/Http/Helpers/Translation.php",
+            "app/Http/Helpers/Country.php"
         ],
         "psr-4": {
             "App\\": "app/",
