--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "@tiptap/starter-kit": "^2.0.0-beta.164",
         "@tiptap/vue-3": "^2.0.0-beta.85",
         "@vueform/multiselect": "^2.3.1",
+        "leaflet": "^1.7.1",
+        "leaflet.markercluster": "^1.5.3",
         "vue-sweetalert2": "^5.0.2",
         "vuedraggable": "^4.1.0"
     }
