--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "files": [
             "app/Http/Helpers/Stripe.php",
             "app/Http/Helpers/Translation.php",
-            "app/Http/Helpers/Country.php"
+            "app/Http/Helpers/Country.php",
+            "app/Http/Helpers/Url.php"
         ],
         "psr-4": {
             "App\\": "app/",
